Final Debate About Fortnite

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 	<!-- Content goes here -->
-	<h1><span style=>2 most Popluar games in the history, but which one is better Game??</span></h1> <hr> <br>
+	<section><h1><span style=>2 most Popluar games in the history, but which one is better Game??</span></h1> <hr> <br>
 	<img src="images/fortniteexample.jpg">
 	<h2>Jin's statments about why Fortnite is better than PUBG</h2>
-	<p>There are 5 main reasons why Fortnite is better than PUBG. <br>Fortnite is free to play, it doesnt cost you any money to play the game unlike PUBG.<br> another reason to consider is that game irons out the bugs with patches fast and quick.<br> 3rd reason is that they dont have as many hackers as PUBG which is very huge issue game is dealing with. <br>4th reason is plain simple, developers Epic Games listens to the gamers and update their game and add new contents every season. <br>and the last reason why game is better than PUBG is due to game having no loot boxes, which ends up costing you infinite amount of money to get something you want.</p>
+		<p>There are 5 main reasons why Fortnite is better than PUBG. <br>Fortnite is free to play, it doesnt cost you any money to play the game unlike PUBG.<br> another reason to consider is that game irons out the bugs with patches fast and quick.<br> 3rd reason is that they dont have as many hackers as PUBG which is very huge issue game is dealing with. <br>4th reason is plain simple, developers Epic Games listens to the gamers and update their game and add new contents every season. <br>and the last reason why game is better than PUBG is due to game having no loot boxes, which ends up costing you infinite amount of money to get something you want.</p>
+	</section>
 	
 
 	</div>
