--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<section>
 	<img src="images/PUBG1.jpg">
 	<h2> MA's statements about why PUBG is better than Fortnite</h2>
-		<p>Firstly, PUBG has a much more realistic graphic, the realistic graphic is more popular and acceptable by most of the players. <br> Secondly, PUBG is more competitive during the game, so that's more exciting to play PUBG than Fortnite. <br> Thirdly, the maps of PUBG is much more larger than Fortnite, so players ahve more choices when they're playing PUBG. <br> More guns and real guns make PUBG more interesting and realistic. The last point is that PUBG is more challenge game than Fortnite. it's easy to see the differences between players and players about their discretions and reflexes.</p>
+		<p>Firstly, PUBG has a much more realistic graphic, the realistic graphic is more popular and acceptable by most of the players. <br> Secondly, PUBG is more competitive during the game, so that's more exciting to play PUBG than Fortnite. <br> Thirdly, the maps of PUBG is much more larger than Fortnite, so players ahve more choices when they're playing PUBG. <br> More guns and real guns make PUBG more interesting and realistic. <br> The last point is that PUBG is more challenge game than Fortnite. it's easy to see the differences between players and players about their discretions and reflexes.</p>
 	</section>
 	</div>
 </center>
