--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 		<p>There are 5 main reasons why Fortnite is better than PUBG. <br>Fortnite is free to play, it doesnt cost you any money to play the game unlike PUBG.<br> another reason to consider is that game irons out the bugs with patches fast and quick.<br> 3rd reason is that they dont have as many hackers as PUBG which is very huge issue game is dealing with. <br>4th reason is plain simple, developers Epic Games listens to the gamers and update their game and add new contents every season. <br>and the last reason why game is better than PUBG is due to game having no loot boxes, which ends up costing you infinite amount of money to get something you want.</p>
 	</section>
 	
-
+	<section>
+	<img src="images/PUBG1.jpg">
+	<h2> MA's statements about why PUBG is better than Fortnite</h2>
+		<p>Firstly, PUBG has a much more realistic graphic, the realistic graphic is more popular and acceptable by most of the players. <br> Secondly, PUBG is more competitive during the game, so that's more exciting to play PUBG than Fortnite. <br> Thirdly, the maps of PUBG is much more larger than Fortnite, so players ahve more choices when they're playing PUBG. <br> More guns and real guns make PUBG more interesting and realistic. <br> The last point is that PUBG is more challenge game than Fortnite. it's easy to see the differences between players and players about their discretions and reflexes.</p>
+	</section>
 	</div>
 </center>
 </body>
